--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
+    "i": "^0.3.7",
+    "npm": "^9.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
