--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "happy-dom": "^8.1.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,13 +18,18 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.0",
     "i": "^0.3.7",
+    "jest": "^29.3.1",
     "npm": "^9.2.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.0",
+    "vitest": "^0.27.0"
   }
 }
